--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,30 +17,24 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.home.SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.cosmetictogether.presentation.login.LoginActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Design.NoActionBar"/>
+            android:exported="false" />
         <activity
-            android:name=".presentation.home.SignupActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Design.NoActionBar"/>
+            android:name=".presentation.signup.view.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.home.HomeActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Design.NoActionBar"/>
+            android:exported="false" />
         <activity
-            android:name=".presentation.signup.view.EmailVerificationActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Design.NoActionBar"/>
+            android:name=".presentation.signup.EmailVerificationActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
