회원가입 구현

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".presentation.home.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.signup.EmailVerificationActivity"
+            android:name=".presentation.signup.view.EmailVerificationActivity"
             android:exported="false" />
     </application>
 
