FEAT : 이미지 권한 추가

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
@@ -34,6 +34,9 @@
             android:exported="false" />
         <activity
             android:name=".presentation.form.view.FormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.form.view.FormCreateActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.mypage.view.MyPageActivity"
