FEAT : 업로드 파일 크기 변경

--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
       ddl-auto: create
       show-sql: true
       defer-datasource-initialization: true
+  servlet:
+    multipart:
+      max-file-size: 10MB  # 파일의 최대 크기
+      max-request-size: 10MB  # 요청의 최대 크기 (여러 파일을 포함할 수 있음)
