--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -11,5 +11,8 @@ spring:
       defer-datasource-initialization: true
   servlet:
     multipart:
-      max-file-size: 10MB  # 파일의 최대 크기
-      max-request-size: 10MB  # 요청의 최대 크기 (여러 파일을 포함할 수 있음)
+      max-file-size: 20MB  # 파일의 최대 크기
+      max-request-size: 20MB  # 요청의 최대 크기 (여러 파일을 포함할 수 있음)
+  server:
+    tomcat:
+      max-http-form-post-size: 20971520  # 20MB
